base/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana
  namespace: monitoring

spec:
  ingressClassName: nginx

  rules:
  - host: grafana.oklabs.in

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: grafana
            port:
              number: 3000
